--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>domain</artifactId>
 
+    <dependencies>
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.12.4</version>
+        </dependency>
+    </dependencies>
 
 </project>
