--- a/travel/pom.xml
+++ b/travel/pom.xml
@@ -126,5 +126,17 @@
             <artifactId>lombok</artifactId>
             <version>1.12.4</version>
         </dependency>
+
+        <!--json相关-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.3</version>
+        </dependency>
     </dependencies>
 </project>
